api_versioned_docs/version-12.1.1/avalonia/controls/checkboxcolumncreateoptions.mdx
---
title: 'CheckBoxColumnCreateOptions'
hide_title: true
slug: '/avalonia/controls/checkboxcolumncreateoptions'
uid: 'Avalonia.Controls.CheckBoxColumnCreateOptions'
commentId: 'T:Avalonia.Controls.CheckBoxColumnCreateOptions'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.TreeDataGrid'
assembly: 'Avalonia.Controls.TreeDataGrid'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls'
tfms:
  - 'net8.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">CheckBoxColumnCreateOptions Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
</div>

<div className="apiref-page__lead">

Holds options for configuring a [Avalonia.Controls.TreeDataGridCheckBoxColumn](xref:Avalonia.Controls.TreeDataGridCheckBoxColumn) via the fluent API.

</div>

<div className="apiref-page__signature">

```csharp
public class CheckBoxColumnCreateOptions
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="columncreateoptions">ColumnCreateOptions</a> <span className="apiref-page__relation-separator">-&gt;</span> CheckBoxColumnCreateOptions
</div>
</div>

## Constructors

| Name | Description |
| --- | --- |
| [CheckBoxColumnCreateOptions](#uid-8fb05c1ddd) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-8fb05c1ddd"></span>

### CheckBoxColumnCreateOptions Constructor

```csharp
public CheckBoxColumnCreateOptions()
```

</section>

## Properties

| Name | Description |
| --- | --- |
| [AllowTriStateSorting](columncreateoptions.mdx#uid-2d3c781356) | Gets or sets whether the user can cycle through ascending, descending, and unsorted states when clicking the column header. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [BeginEditGestures](columncreateoptions.mdx#uid-a7d933d9bd) | Gets or sets the gesture(s) that will cause a cell to enter edit mode. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [CanUserResize](columncreateoptions.mdx#uid-265c20fcbb) | Gets or sets a value indicating whether the user can resize a column by dragging. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [CanUserSort](columncreateoptions.mdx#uid-3860b5729a) | Gets or sets a value indicating whether the user can sort a column by clicking. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [CompareAscending](columncreateoptions.mdx#uid-5685462157) | Gets or sets a custom comparison for ascending ordered columns. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [CompareDescending](columncreateoptions.mdx#uid-49dcda7052) | Gets or sets a custom comparison for descending ordered columns. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [HorizontalContentAlignment](columncreateoptions.mdx#uid-b48fbd7d1b) | Gets or sets the horizontal alignment of the cell content. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [IsReadOnly](#uid-cced7a203e) | Gets or sets whether the column is read-only. |
| [MaxWidth](columncreateoptions.mdx#uid-4554236b2f) | Gets or sets the maximum width for a column. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [MinWidth](columncreateoptions.mdx#uid-1776db3e6c) | Gets or sets the minimum width for a column. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [VerticalContentAlignment](columncreateoptions.mdx#uid-77a5b34ee7) | Gets or sets the vertical alignment of the cell content. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [Width](columncreateoptions.mdx#uid-3cd08b17fd) | Gets or sets the column width. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-cced7a203e"></span>

### IsReadOnly Property

Gets or sets whether the column is read-only.

```csharp
public bool IsReadOnly { get; set; }
```

</section>

</ApiRefPage>

